tests/rosetta/out/Java/avl-tree.error
javac: exit status 1
/tmp/AvlTree.java:26: error: <identifier> expected
    static Map<String,Object> double(Map<String,Object> root, int dir) {
                             ^
/tmp/AvlTree.java:26: error: <identifier> expected
    static Map<String,Object> double(Map<String,Object> root, int dir) {
                                    ^
/tmp/AvlTree.java:54: error: '.class' expected
        return double(root, opp(dir));
                     ^
/tmp/AvlTree.java:54: error: not a statement
        return double(root, opp(dir));
                      ^
/tmp/AvlTree.java:54: error: ';' expected
        return double(root, opp(dir));
                          ^
/tmp/AvlTree.java:54: error: ';' expected
        return double(root, opp(dir));
                                    ^
/tmp/AvlTree.java:93: error: '.class' expected
            return new NodeDone(double(root, dir), false);
                                      ^
/tmp/AvlTree.java:93: error: not a statement
            return new NodeDone(double(root, dir), false);
                                       ^
/tmp/AvlTree.java:93: error: ';' expected
            return new NodeDone(double(root, dir), false);
                                           ^
/tmp/AvlTree.java:93: error: not a statement
            return new NodeDone(double(root, dir), false);
                                             ^
/tmp/AvlTree.java:93: error: ';' expected
            return new NodeDone(double(root, dir), false);
                                                ^
/tmp/AvlTree.java:116: error: illegal start of type
            data = (int)(Integer.parseInt(((?)heir).get("Data")));
                                            ^
/tmp/AvlTree.java:116: error: illegal start of expression
            data = (int)(Integer.parseInt(((?)heir).get("Data")));
                                             ^
/tmp/AvlTree.java:116: error: ')' or ',' expected
            data = (int)(Integer.parseInt(((?)heir).get("Data")));
                                              ^
/tmp/AvlTree.java:116: error: ';' expected
            data = (int)(Integer.parseInt(((?)heir).get("Data")));
                                                  ^
/tmp/AvlTree.java:116: error: ';' expected
            data = (int)(Integer.parseInt(((?)heir).get("Data")));
                                                               ^
16 errors
